# claude-skylight-plugin

./: .gitignore  .mcp.json  README.md  pyproject.toml  server.py  skylight_core.py
.claude-plugin/: plugin.json
docs/superpowers/plans/: 2026-07-15-skylight-mcp-plugin.md
docs/superpowers/specs/: 2026-07-15-skylight-mcp-design.md
scripts/: skylight_probe.py
skills/skylight/: SKILL.md
spec/: skylight-openapi.yaml
tests/: test_core.py  test_version_sync.py
