[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "claude-skylight-plugin"
version = "0.2.0"
description = "Skylight Calendar events skill for Claude Code and Claude Desktop (MCP)"
license = "MIT"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "mcp[cli]>=1.26.0",
    "httpx>=0.27",
]

[dependency-groups]
dev = ["pytest>=8.0", "respx>=0.22"]

[tool.hatch.build.targets.wheel]
packages = ["."]
only-include = ["server.py", "skylight_core.py"]

[project.scripts]
claude-skylight-plugin = "server:mcp.run"
